move submodule inside apriltag_ros

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "apriltag_umich"]
-	path = apriltag_umich
+	path = apriltag_ros/apriltag_umich
 	url = https://github.com/AprilRobotics/apriltag.git
