--- a/apriltag_msgs/CMakeLists.txt
+++ b/apriltag_msgs/CMakeLists.txt
@@ -1,16 +1,30 @@
 cmake_minimum_required(VERSION 3.5)
 project(apriltag_msgs)
 
-find_package(catkin REQUIRED
-             COMPONENTS std_msgs geometry_msgs message_generation)
+if(NOT WIN32)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra")
+endif()
 
-add_message_files(DIRECTORY
-                  msg
-                  FILES
-                  Apriltag.msg
-                  ApriltagArrayStamped.msg
-                  ApriltagPoseStamped.msg)
 
-generate_messages(DEPENDENCIES geometry_msgs std_msgs)
+find_package(ament_cmake REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 
-catkin_package(CATKIN_DEPENDS geometry_msgs message_runtime std_msgs)
+# declare the message files to generate code for
+set(msg_files
+   "msg/Apriltag.msg"
+   "msg/ApriltagArrayStamped.msg"
+   "msg/ApriltagPoseStamped.msg"
+)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+   ${msg_files}
+   DEPENDENCIES builtin_interfaces geometry_msgs std_msgs
+)
+
+ament_export_dependencies(rosidl_default_runtime)
+
+ament_package()
