--- a/apriltag_mit/package.xml
+++ b/apriltag_mit/package.xml
@@ -5,9 +5,13 @@
   <author>Michael Kaess</author>
   <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>
   <license>GPLv3</license>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>roslib</depend>
-  <test_depend>gtest</test_depend>
-  <test_depend>rosunit</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
