--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -1,4 +1,4 @@
-<package format="2">
+<package format="3">
   <name>apriltag_ros</name>
   <version>1.0.0</version>
   <description>The apriltag ros package</description>
@@ -6,20 +6,19 @@
   <author>Chao Qu</author>
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>roscpp</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
-  <depend>image_geometry</depend>
-  <depend>dynamic_reconfigure</depend>
-  <depend>tf2_ros</depend>
-  <depend>tf2_geometry_msgs</depend>
 
   <depend>apriltag_mit</depend>
-  <depend>apriltag</depend>
   <depend>apriltag_msgs</depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
