--- a/apriltag_msgs/CMakeLists.txt
+++ b/apriltag_msgs/CMakeLists.txt
@@ -7,7 +7,6 @@ endif()
 
 
 find_package(ament_cmake REQUIRED)
-find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(std_msgs REQUIRED)
@@ -25,6 +24,6 @@ rosidl_generate_interfaces(${PROJECT_NAME}
    DEPENDENCIES builtin_interfaces geometry_msgs std_msgs
 )
 
-ament_export_dependencies(rosidl_default_runtime)
+ament_export_dependencies(rosidl_default_runtime std_msgs geometry_msgs)
 
 ament_package()
