added tag family 52h13

--- a/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
+++ b/apriltag_ros/cfg/ApriltagDetectorDyn.cfg
@@ -15,10 +15,11 @@ gen.add("nthreads", int_t, 0,
 family_enum = gen.enum([gen.const("t36h11", int_t, 0, "t36h11"),
                         gen.const("t25h9", int_t, 1, "t25h9"),
                         gen.const("t16h5", int_t, 2, "t16h5"),
-                        gen.const("ts41h12", int_t, 3, "ts41h12")],
+                        gen.const("ts41h12", int_t, 3, "ts41h12"),
+                        gen.const("ts52h13", int_t, 4, "ts52h13")],
                        "An enum to set tag family")
 gen.add("family", int_t, 0,
-        "tag family", 0, 0, 3,
+        "tag family", 0, 0, 4,
         edit_method=family_enum)
 
 type_enum = gen.enum([gen.const("mit", int_t, 0, "mit"),
