--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,20 +4,24 @@ on:
  push:
     branches:
       - master
+ pull_request:
+    branches: [ master]
+ workflow_dispatch:
+    branches: [ master]
 
 jobs:
-  build_xenial:
-    runs-on: ubuntu-16.04
-    container:
-      image: berndpfrommer/xenial_ros:1
-    name: build repo from source on xenial
-    steps:
-      - name: check out github repo
-        uses: actions/checkout@v1
-        with:
-          fetch-depth: 0
-      - name: compile from source
-        run: git checkout master && ./.github/scripts/build.bash
+  # build_xenial:
+  #   runs-on: ubuntu-16.04
+  #   container:
+  #     image: berndpfrommer/xenial_ros:1
+  #   name: build repo from source on xenial
+  #   steps:
+  #     - name: check out github repo
+  #       uses: actions/checkout@v1
+  #       with:
+  #         fetch-depth: 0
+  #     - name: compile from source
+  #       run: git checkout master && ./.github/scripts/build.bash
   build_bionic:
     runs-on: ubuntu-18.04
     container:
