another stab at getting the build to run

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,9 @@ jobs:
           fetch-depth: 0
           submodules: recursive
       - name: compile from source
-        run: git checkout master && ./.github/scripts/build.bash
+        run: git checkout master
+	run: git submodule update --init --recursive
+	run: ./.github/scripts/build.bash
   build_focal:
     runs-on: ubuntu-20.04
     container:
@@ -47,5 +49,6 @@ jobs:
           fetch-depth: 0
           submodules: recursive
       - name: compile from source
-        run: git checkout master && ./.github/scripts/build.bash
-  
+        run: git checkout master
+	run: git submodule update --init --recursive
+	run: ./.github/scripts/build.bash
