more syntax fixes...

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,9 +34,7 @@ jobs:
           fetch-depth: 0
           submodules: recursive
       - name: compile from source
-        run: git checkout master
-        run: git submodule update --init --recursive
-        run: ./.github/scripts/build.bash
+        run: git checkout master && git submodule update --init --recursive && ./.github/scripts/build.bash
   build_focal:
     runs-on: ubuntu-20.04
     container:
@@ -49,6 +47,4 @@ jobs:
           fetch-depth: 0
           submodules: recursive
       - name: compile from source
-        run: git checkout master
-        run: git submodule update --init --recursive
-        run: ./.github/scripts/build.bash
+        run: git checkout master && git submodule update --init --recursive && ./.github/scripts/build.bash
