Add necessary macros for the ROS2 component

--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -58,7 +58,7 @@ target_link_libraries(apriltag_pose_estimator_node apriltag_pose_estimator_compo
 
 # register the component
 rclcpp_components_register_nodes(apriltag_detector_component "apriltag_ros::ApriltagDetectorComponent")
-rclcpp_components_register_nodes(apriltag_pose_estimator_component "apriltag_ros::ApriltagPoseEstimatorComponent")
+rclcpp_components_register_nodes(apriltag_pose_estimator_component "apriltag_ros::ApriltagPoseEstimator")
 
 install(TARGETS
   ${PROJECT_NAME}
