--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,19 +22,20 @@ jobs:
   #         fetch-depth: 0
   #     - name: compile from source
   #       run: git checkout master && ./.github/scripts/build.bash
-  build_bionic:
-    runs-on: ubuntu-18.04
-    container:
-      image: berndpfrommer/bionic_ros:1
-    name: build repo from source on bionic
-    steps:
-      - name: check out github repo
-        uses: actions/checkout@v1
-        with:
-          fetch-depth: 0
-          submodules: recursive
-      - name: compile from source
-        run: git checkout master && git submodule update --init --recursive && ./.github/scripts/build.bash
+
+#  build_bionic:
+#   runs-on: ubuntu-18.04
+#   container:
+#     image: berndpfrommer/bionic_ros:1
+#   name: build repo from source on bionic
+#   steps:
+#     - name: check out github repo
+#       uses: actions/checkout@v1
+#       with:
+#         fetch-depth: 0
+#         submodules: recursive
+#     - name: compile from source
+#       run: git checkout master && git submodule update --init --recursive && ./.github/scripts/build.bash
   build_focal:
     runs-on: ubuntu-20.04
     container:
